# onionizer

./: .pre-commit-config.yaml  README.md  ci.sh  noxfile.py  pyproject.toml
.circleci/: config.yaml  config.yml
onionizer/: LICENSE.txt  README.md  pyproject.toml
onionizer/onionizer/: __about__.py  __init__.py  onionizer.py
onionizer/tests/: __init__.py  test_onionizer.py
