[project]
name = "onionizer"
version = "0.2"
description = "A Python package to add middlewares to any function"
python = ">=3.7"
readme = "README.md"
keywords = [
  'decorator',
  'middleware',
]
license = "MIT"
[project.urls]
"Source code" = "https://github.com/brumar/onionizer"

[dependencies]

[dev-dependencies]
pytest = '7'
nox = '2022.11.21'
ruff = '0.0.260'
pre-commit= '3.2.1'
mkdocs = '1.4.2'


[tool.hatch.build.targets.sdist]
exclude = [
  "/.pytest_cache",
  "/docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["onionizer/onionizer"]